--- a/app/src/main/res/layout/image_list_item.xml
+++ b/app/src/main/res/layout/image_list_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="6dp"
+    android:elevation="6dp"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,17 +16,20 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/product_image"
             android:layout_margin="20dp"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:src="@drawable/clothing"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:background="@drawable/border"/>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/product_name"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="20dp"
@@ -32,9 +38,10 @@
                 android:layout_height="wrap_content"
                 android:text="item name"
                 android:textStyle="bold"
-                android:textSize="35dp"/>
+                android:textSize="25dp"/>
 
             <TextView
+                android:id="@+id/product_price"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="20dp"
@@ -43,20 +50,24 @@
                 android:layout_height="wrap_content"
                 android:text="price"
                 android:textStyle="bold"
-                android:textSize="20dp"/>
+                android:textSize="15dp"/>
 
-            <RatingBar
+            <TextView
+                android:id="@+id/product_des"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="35dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="20dp"
+                android:text="description"
+                android:textStyle="bold"
+                android:textSize="15dp"/>
+
 
         </LinearLayout>
 
 
     </LinearLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
