--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,16 +15,82 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_marginTop="40dp"
-            android:textSize="35dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="7dp"
-            android:layout_marginBottom="10dp"
+        android:orientation="vertical"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Profile"/>
+            android:background="@drawable/top_background"
+            android:orientation="vertical"
+            android:paddingTop="40dp"
+            android:paddingBottom="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="15dp"
+                    app:srcCompat="@drawable/brandingtwo" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="7dp"
+                    android:background="@drawable/border">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/search_bar"
+                        android:layout_width="196dp"
+                        android:layout_height="47dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="7dp"
+                        android:background="@drawable/none"
+                        android:fontFamily="@font/adamina"
+                        android:hint="Search Here"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="12dp" />
+
+                    <ImageButton
+
+                        android:id="@+id/search_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/none"
+                        android:src="@drawable/baseline_search_24" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_marginTop="10dp"
+                android:textSize="35dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="7dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Profile"/>
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,6 +101,7 @@
                 android:layout_margin="7dp"
                 android:background="@drawable/border"
                 android:layout_width="160dp"
+                android:src="@drawable/img"
                 android:layout_height="160dp"/>
 
             <LinearLayout
@@ -43,16 +110,114 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:gravity="center"
+                    android:id="@+id/customer_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Username"
-                    android:textSize="25dp"
                     android:layout_margin="7dp"
-                    android:textStyle="bold"/>
+                    android:gravity="center"
+                    android:text="Elon Musk"
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center"
+                        android:layout_marginLeft="7dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Phone No"
+                        android:textSize="15dp"
+                        android:layout_margin="7dp"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:id="@+id/customer_phno"
+                        android:gravity="center"
+                        android:layout_marginLeft="7dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1234567890"
+                        android:textSize="15dp"
+                        android:layout_margin="7dp"
+                        android:textStyle="bold"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center"
+                        android:layout_marginLeft="7dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Address"
+                        android:textSize="15dp"
+                        android:layout_margin="7dp"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:id="@+id/customer_address"
+                        android:gravity="center"
+                        android:layout_marginLeft="7dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Nagerjala,Agarata, 799003"
+                        android:textSize="15dp"
+                        android:layout_margin="7dp"
+                        android:textStyle="bold"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center"
+                        android:layout_marginLeft="7dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Email"
+                        android:textSize="15dp"
+                        android:layout_margin="7dp"
+                        android:textStyle="bold"/>
+                    <TextView
+                        android:id="@+id/customer_email"
+                        android:gravity="center"
+                        android:layout_marginLeft="7dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="elonmust@gmail.com"
+                        android:textSize="15dp"
+                        android:layout_margin="7dp"
+                        android:textStyle="bold"/>
+
+                </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/edit"
+            android:layout_margin="7dp"
+            android:textSize="20dp"
+            android:text="Edit Your Profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/seller"
+            android:layout_margin="7dp"
+            android:textSize="20dp"
+            android:text="Become a Seller"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/customer_support"
+            android:layout_margin="7dp"
+            android:textSize="20dp"
+            android:text="Get Customer Support"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
