--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -98,11 +98,12 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/customer_image"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
                 android:layout_margin="7dp"
                 android:background="@drawable/border"
-                android:layout_width="160dp"
-                android:src="@drawable/img"
-                android:layout_height="160dp"/>
+                android:src="@drawable/baseline_person_24" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -138,7 +139,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1234567890"
-                        android:textSize="15dp"
+                        android:textSize="10dp"
                         android:layout_margin="7dp"
                         android:textStyle="bold"/>
 
@@ -162,7 +163,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Nagerjala,Agarata, 799003"
-                        android:textSize="15dp"
+                        android:textSize="10dp"
                         android:layout_margin="7dp"
                         android:textStyle="bold"/>
 
@@ -186,7 +187,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="elonmust@gmail.com"
-                        android:textSize="15dp"
+                        android:textSize="10dp"
                         android:layout_margin="7dp"
                         android:textStyle="bold"/>
 
