--- a/app/src/main/res/layout/activity_final_order.xml
+++ b/app/src/main/res/layout/activity_final_order.xml
@@ -33,6 +33,19 @@
             android:textSize="40dp"
             android:text="Order Placed Successfully !"/>
 
+        <Button
+            android:id="@+id/return_back"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginLeft="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#C9FFF3"
+            android:text="Return Back to main Page"
+            android:fontFamily="@font/adamina"
+            android:textColor="#2196F3"
+            android:textSize="20dp"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
